remove ignored files #2

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+
+.gradle/
+build/
+!gradle/wrapper/
+!gradle/wrapper/gradle-wrapper.jar
+!gradle/wrapper/gradle-wrapper.properties
+conversations/
