--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -6,6 +6,14 @@ plugins {
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
+
 repositories {
     mavenCentral()
     maven { url 'https://maven.aliyun.com/repository/public' }
@@ -24,4 +32,11 @@ dependencies {
     implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
     implementation 'io.github.cdimascio:java-dotenv:5.2.2'
     implementation('com.squareup.okhttp3:logging-interceptor:4.12.0')
+
+    compileOnly 'org.projectlombok:lombok:1.18.34'
+    annotationProcessor 'org.projectlombok:lombok:1.18.34'
+}
+
+tasks.withType(JavaCompile) {
+    options.annotationProcessorPath = configurations.annotationProcessor
 }
